--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.1",
+    "@amcharts/amcharts4-geodata": "^4.1.12",
     "@angular/animations": "8.2.2",
     "@angular/common": "8.2.2",
     "@angular/compiler": "8.2.2",
